--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,11 @@
   <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
 
   <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
-
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUR6P5mafV5z890WK7o9RIJnOHKIsVIwE&libraries=places&callback=initMap"></script>
+  <script type="text/javascript"
+    src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=false&key=AIzaSyBUR6P5mafV5z890WK7o9RIJnOHKIsVIwE&callback=initMap">
+    </script>
   <script>var Alert = ReactBootstrap.Alert;</script>
   <title>React App</title>
 </head>
