--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,10 @@
     src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=false&key=AIzaSyBUR6P5mafV5z890WK7o9RIJnOHKIsVIwE&callback=initMap">
     </script>
   <script>var Alert = ReactBootstrap.Alert;</script>
-  <title>React App</title>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+  <title>Sport Buddies App</title>
+
 </head>
 
 <body>
